[gd_scene load_steps=5 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://bullet.png" type="Texture" id=2]
[ext_resource path="res://modulate_sprite.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.580392, 0.419608, 0.160784, 1 )
position = Vector2( 0, -0.5 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
modulate_color = "Detail"
random = false
random_tick = 0.05

[node name="RateDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="timeout" from="RateDelay" to="." method="_on_rate_delay_timeout"]
